src/App.css
/* ===== GOOGLE FONT ===== */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');

/* ===== ROOT ===== */
:root {
  --primary: #6c63ff;
  --secondary: #00c9a7;
  --bg: #0f172a;
  --card: rgba(255, 255, 255, 0.05);
  --text: #ffffff;
}

/* ===== GLOBAL ===== */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  overflow-x: hidden;
}

body {
  font-family: "Poppins", sans-serif;
  background: var(--bg);
  color: var(--text);
  overflow-x: hidden;
  position: relative;
}

section {
  padding: 80px 10%;
}

.heading {
  text-align: center;
  margin-bottom: 40px;
  position: relative;
}

.heading::after {
  content: "";
  width: 60px;
  height: 4px;
  background: var(--secondary);
  display: block;
  margin: 10px auto;
  border-radius: 5px;
}

/* ===== NAVBAR ===== */
.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 25px 10%;
  background: #111827;
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
  position: sticky;
  top: 0;
  z-index: 1000;
}

.nav h2 {
  color: var(--primary);
}

.nav-links {
  display: flex;
  list-style: none;
  max-width: 100vw;
}

.nav-links li {
  margin: 0 12px;
}

.nav button {
  background: none;
  border: none;
  color: white;
  cursor: pointer;
  font-size: 14px;
}

.green {
  color: #0ca8a7;
}

.nav button:hover {
  color: var(--primary);
}

.active button {
  color: var(--secondary);
}

/* HAMBURGER */
.menu-icon {
  display: none;
  font-size: 26px;
  cursor: pointer;
}



/* RESUME BUTTON */
.resume-btn {
  padding: 8px;
  border: 2px solid #0ca8a7;
  background: #0ca8a7;
  color: #ffffff;
  border-radius: 5px;
  text-decoration: none;
}

.resume-btn:hover {
  background: transparent;
  color: var(--primary);
}

.mobile-resume {
  display: none;
}

/* ===== BUTTON ===== */
.primary {
  width: 200px;
  box-sizing: border-box;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  white-space: nowrap;
  padding: 15px 25px;
  border-radius: 8px;
  border: none;
  background: linear-gradient(135deg, #6c63ff, #00c9a7);
  color: white;
  cursor: pointer;
  transition: 0.3s;
  text-decoration: none;
}

.github {
  padding: 12px 25px;
  width: 100px;
  border-radius: 8px;
  border: none;
  background: linear-gradient(135deg, #6c63ff, #00c9a7);
  color: white;
  cursor: pointer;
  margin: 5px;
}

.live {
  padding: 10px 20px;
  margin-top: 3px;
  width: 100px;
  border-radius: 8px;
  border: 2px solid var(--primary);
  background: var(--primary);
  color: white;
  cursor: pointer;
  transition: 0.3s;
}

.secondary {
  width: 200px;
  box-sizing: border-box;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  white-space: nowrap;
  padding: 15px 25px;
  border-radius: 8px;
  border: 2px solid var(--primary);
  background: var(--primary);
  color: white;
  cursor: pointer;
  transition: 0.3s;
  text-decoration: none;
}

.secondary:hover {
  background: transparent;
  color: var(--primary);
}

.live:hover {
  background: transparent;
  color: var(--primary);
}

/* ===== HERO ===== */
.hero {
  padding-top: 100px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 40px;
  flex-wrap: wrap;
}

.hero-left {
  flex: 1;
  min-width: 280px;
}

.hero-left h1 {
  font-size: 48px;
  background: linear-gradient(90deg, #6c63ff, #00c9a7);
  -webkit-background-clip: text;
  color: transparent;
}

.hero-left h2 {
  color: var(--secondary);
  margin: 10px 0;
}

.hero-left p {
  color: #cbd5e1;
  margin: 15px 0;
}

.hero-right {
  flex: 1;
  display: flex;
  justify-content: center;
}

.hero-right img {
  width: 280px;
  height: 280px;
  object-fit: cover;
  border-radius: 50%;
  border: 3px solid var(--secondary);
}

.btns {
  margin-top: 10px;
  display: flex;
  gap: 15px;
  flex-wrap: wrap;
}

/* ===== ABOUT ===== */
.about-container {
  max-width: 800px;
  margin: 0 auto;
  text-align: center;
}

.about-container p {
  color: #cbd5e1;
  line-height: 1.7;
}

/* ===== SKILLS ===== */
.skills-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  gap: 20px;
}

.skill-card {
  padding: 20px;
  border-radius: 12px;
  background: var(--card);
  text-align: center;
  transition: 0.3s;
}

.skill-card:hover {
  transform: scale(1.05);
}

.skill-card .icon {
  font-size: 40px;
  margin-bottom: 10px;
  color: var(--secondary);
}

/* ===== PROJECTS ===== */
.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
  gap: 30px;
}

.grid p {
  color: #00c9a7;
  margin-top: 10px;
  font-size: 20px;
}

.card {
  border-radius: 15px;
  background: var(--card);
  text-align: center;
  transition: 0.3s;
  padding-bottom: 15px;

  display: flex;
  flex-direction: column;
  height: 100%;
}

.card:hover {
  transform: scale(1.05);
}

.project-img {
  width: 100%;
  height: 200px;
  object-fit: cover;
}

.card .des {
  padding: 15px;
  flex-grow: 1;
}

.buttonDiv {
  display: flex;
  justify-content: center;
  gap: 10px;
  flex-wrap: wrap;
}

/* ===== CONTACT ===== */
.contact-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  /* desktop */
  gap: 25px;
  margin-top: 40px;
}

.contact-card {
  display: flex;
  align-items: center;
  gap: 15px;
  padding: 20px;
  border-radius: 12px;
  background: var(--card);
  transition: 0.3s;
}

.contact-card:hover {
  transform: translateY(-5px);
}

.contact-icon {
  font-size: 22px;
  color: var(--secondary);
}

.label {
  font-size: 13px;
  color: #9ca3af;
}

.value {
  font-size: 15px;
  color: #e5e7eb;
  text-decoration: none;
}

.value:hover {
  color: var(--secondary);
}

/* ===== FOOTER ===== */
.footer {
  text-align: center;
  padding: 30px;
  background: #111827;
  border-top: 1px solid rgba(255, 255, 255, 0.1);
}

/* ===== RESPONSIVE ===== */
@media (max-width: 768px) {
  .contact-grid {
    grid-template-columns: 1fr;
    /* 👈 mobile fix */
  }


  .menu-icon {
    display: block;
  }

  .nav-links {
    position: fixed;
    /* 🔥 absolute → fixed */
    top: 70px;
    left: 0;
    /* right hatao */
    width: 100%;
    height: 100vh;
    /* full screen */
    background: #111;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transform: translateX(100%);
    /* hidden */
    transition: 0.3s ease;
  }

  .nav-links.active {
    transform: translateX(0);
    /* show */
  }

  .nav-links li {
    margin: 15px 0;
  }

  .resume-btn {
    text-decoration: none;
    display: none;
  }

  .mobile-resume {
    display: block;
  }

  .hero {
    flex-direction: column;
    text-align: center;
  }

  .hero-right img {
    width: 220px;
    height: 220px;
  }
}


@media (max-width: 480px) {
  .btns {
    flex-direction: column;
    align-items: center;
  }

  .primary,
  .secondary {
    width: 100%;
    max-width: 250px;
  }

  .hero-left h1 {
    font-size: 32px;
  }

  section {
    padding: 50px 20px;
  }

  .menu-icon {
    display: block;
  }

  .nav-links {
    position: fixed;
    top: 70px;
    left: 0;
    width: 100%;
    height: calc(100vh - 70px);
    background: rgba(0, 0, 0, 0.95);

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    transform: translateX(100%);
    /* hidden */
    transition: 0.3s ease;
    z-index: 999;
  }

  .nav-links.active {
    transform: translateX(0);
    /* show */
  }

  .nav-links li {
    margin: 20px 0;
  }

  .resume-btn {
    display: none;
  }

  .mobile-resume {
    display: block;
    margin-top: 10px;
  }
}

